--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,7 @@ button {
 .hero-button:focus {
   background-color: #404bbf;
 }
+
 /* #endregion hero */
 
 /* #region reviews */
@@ -553,5 +554,59 @@ button {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: #31d0aa;
+}
+
+.container-subscribe {
+  margin-left: 80px;
+}
+
+.form-subscribe {
+  display: flex;
+  align-items: flex-end;
+}
+
+.label-subscribe {
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+  gap: 16px;
+  padding-right: auto;
+  display: flex;
+  flex-direction: column;
+  margin-right: 24px;
+}
+
+.input-subscribe {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: #2e2f42;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.btn-subscribe {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+}
+
+.footer-input-icon {
+}
+.input-icon {
+  fill: #f4f4fd;
 }
 /* #endregion footer */
