--- a/css/styles.css
+++ b/css/styles.css
@@ -650,7 +650,11 @@ button {
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
   margin: 0 auto;
-  transform: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop:not(.is-open) .modal {
+  transform: translate(-50%, -100%);
 }
 
 .modal-close-btn {
@@ -706,11 +710,10 @@ button {
   flex-direction: column;
   gap: 8px;
   border-radius: 4px;
-  width: 360px;
-  height: 336px;
 }
 
 .div-container-modal {
+  margin-bottom: 8px;
 }
 
 .label-model {
@@ -721,7 +724,6 @@ button {
   color: #8e8f99;
   margin-bottom: 4px;
   display: block;
-  margin-bottom: 4px;
 }
 
 .div-modal-input {
@@ -734,6 +736,8 @@ button {
   width: 360px;
   height: 40px;
   padding-left: 38px;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
@@ -742,5 +746,117 @@ button {
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-model:hover,
+.input-model:focus {
+  border-color: #4d5ae5;
+}
+
+.input-model:hover + .modal-icon {
+  fill: #4d5ae5;
+}
+
+.div-container-modal-comment {
+  margin-bottom: 16px;
+}
+
+.label-model-comment {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+  display: block;
+}
+
+.textarea-comment {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 360px;
+  height: 120px;
+  outline: none;
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+}
+
+.textarea-comment::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.textarea-comment:hover,
+.textarea-comment:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-cont-checkbox {
+  margin-bottom: 24px;
+}
+
+.input-checkbox {
+}
+.custom-label-checkbox {
+  cursor: pointer;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: inline-flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.custom-checkbox {
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 8px;
+}
+
+.icon-checkbox {
+}
+
+.link-checkbox {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+}
+.input-checkbox:checked + .custom-label-checkbox > .custom-checkbox {
+  border-color: transparent;
+  background-color: #404bbf;
+}
+
+.button-send {
+  border-radius: 4px;
+  padding: 16px 32px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  color: #fff;
+  border: none;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-send:hover,
+.button-send:focus {
+  background-color: #404bbf;
 }
 /* #endregion backdrop-modal */
