--- a/css/styles.css
+++ b/css/styles.css
@@ -764,25 +764,16 @@ button {
 
 .input-model:hover,
 .input-model:focus {
-  fill: #4d5ae5;
+  border-color: #4d5ae5;
 }
 
-.input-model:hover + .modal-icon {
+.input-model:hover + .modal-icon,
+.input-model:focus + .modal-icon {
   fill: #4d5ae5;
 }
 
 .div-container-modal-comment {
   margin-bottom: 16px;
-}
-
-.label-model-comment {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 117%;
-  letter-spacing: 0.04em;
-  color: #8e8f99;
-  margin-bottom: 4px;
-  display: block;
 }
 
 .textarea-comment {
@@ -801,6 +792,7 @@ button {
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   background-color: transparent;
+  outline: transparent;
 }
 
 .textarea-comment:hover,
@@ -836,10 +828,12 @@ button {
   align-items: center;
   margin-right: 8px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  fill: transparent;
 }
 
 .icon-checkbox {
@@ -853,8 +847,9 @@ button {
 }
 .input-checkbox:checked + .custom-label-checkbox > .custom-checkbox {
   border-color: transparent;
-  fill: #404bbf;
+  background-color: #404bbf;
   border: none;
+  fill: #f4f4fd;
 }
 
 .button-send {
