--- a/css/styles.css
+++ b/css/styles.css
@@ -830,7 +830,7 @@ button {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  git fill: transparent;
+  fill: transparent;
 }
 
 .icon-checkbox {
