--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ button {
   background-position: center;
   background-size: cover;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .container-hero {
