--- a/css/styles.css
+++ b/css/styles.css
@@ -593,10 +593,16 @@ button {
   letter-spacing: 0.04em;
   color: #fff;
   padding-left: 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-subscribe::placeholder {
   color: #fff;
+}
+
+.input-subscribe:hover,
+.input-subscribe:focus {
+  border-color: #31d0aa;
 }
 .btn-subscribe {
   display: flex;
@@ -615,8 +621,13 @@ button {
   text-align: center;
   color: #fff;
   border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+  background-color: #31d0aa;
+}
 .input-icon {
   fill: #f4f4fd;
   margin-left: 16px;
